--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -56,8 +56,8 @@ jobs:
             # Unique key of your project. You can find it in SonarQube > [my project] > Project Information (top-right menu)
             # mandatory
             -Dsonar.projectKey=test-project
-            # Comma-separated paths to directories containing main source files.
             -Dsonar.sources=src
+            # Comma-separated paths to directories containing main source files
             # When you need the analysis to take place in a directory other than the one from which it was launched
             #-Dsonar.projectBaseDir= # optional, default is .
             # Comma-separated paths to directories containing test source files.
