--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -64,6 +64,7 @@ jobs:
             # mandatory
             -Dsonar.projectKey=test-project
             -Dsonar.sources=src
+            -Dsonar.java.binaries=target/classes
             # Comma-separated paths to directories containing main source files
             # When you need the analysis to take place in a directory other than the one from which it was launched
             #-Dsonar.projectBaseDir= # optional, default is .
