--- a/Dockerfile1
+++ b/Dockerfile1
@@ -6,7 +6,7 @@ COPY pom.xml /app/pom.xml
 RUN ls -la /app
 RUN mvn clean package -Dmaven.test.skip=true
 
-FROM openjdk:8-jre-alpine
+FROM eclipse/centos_jdk8:latest
 WORKDIR /app
 COPY --from=build /app/target/demo-V1024.jar /app
 COPY --from=build /app/build.xml /app
