--- a/Dockerfile1
+++ b/Dockerfile1
@@ -4,5 +4,5 @@ COPY src/ /app/src
 COPY build.xml /app/build.xml
 COPY pom.xml /app/pom.xml
 RUN ls -la /app
-RUN mvn clean package -Dmaven.test.skip=true
+RUN sudo mvn clean package -Dmaven.test.skip=true
 CMD ["java -jar demo-V1024.jar"]
