--- a/Dockerfile5
+++ b/Dockerfile5
@@ -3,7 +3,7 @@ MAINTAINER Alen Komljen <alen.komljen@live.com>
 
 RUN \
   apt-get install --reinstall ca-certificates &&\
-  add-apt-repository -y ppa:chris-lea/redis-server && \
+  sudo -E add-apt-repository -y ppa:chris-lea/redis-server && \
   apt-get update && \
   apt-get -y install \
           redis-server && \
