--- a/Dockerfile5
+++ b/Dockerfile5
@@ -1,15 +1,20 @@
 FROM komljen/ubuntu
 MAINTAINER Alen Komljen <alen.komljen@live.com>
 
+ENV MONGO_VERSION 2.6.6
+
 RUN \
-  apt-get install --reinstall ca-certificates &&\
-  sudo -E add-apt-repository -y ppa:chris-lea/redis-server && \
+  apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 7F0CEB10 && \
+  echo "deb http://downloads-distro.mongodb.org/repo/ubuntu-upstart dist 10gen" \
+       > /etc/apt/sources.list.d/mongodb.list && \
   apt-get update && \
   apt-get -y install \
-          redis-server && \
+          mongodb-org=${MONGO_VERSION} && \
   rm -rf /var/lib/apt/lists/*
 
-RUN rm /usr/sbin/policy-rc.d
-CMD ["/usr/bin/redis-server"]
+VOLUME ["/data/db"]
 
-EXPOSE 6379
+RUN rm /usr/sbin/policy-rc.d
+CMD ["/usr/bin/mongod"]
+
+EXPOSE 27017
