--- a/Jenkins-dind-ds-pod-arm64.yaml
+++ b/Jenkins-dind-ds-pod-arm64.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 spec:
   nodeSelector:
-    kubernetes.io/arch: amd64
+    kubernetes.io/arch: arm64
   volumes:
   - name: docker-socket
     hostPath: 
