--- a/Jenkins-nerdctl-amd64.yaml
+++ b/Jenkins-nerdctl-amd64.yaml
@@ -1,33 +1,22 @@
 apiVersion: v1
 kind: Pod
+metadata:
+  labels:
+    app: nerdctl
+  name: nerdctl
 spec:
-  serviceAccountName: jenkins-sa
-  nodeSelector:
-    kubernetes.io/arch: amd64
-  volumes:
-  - name: docker-socket
-    hostPath: 
-        path: /var/run 
   containers:
-  - name: docker
-    image: gaussye/docker-ds:20230902-01
-    env:
-    - name: DOCKER_CLI_EXPERIMENTAL
-      value: "enabled"
-    resources:
-      limits:
-        cpu: 1000m
-        memory: 1Gi
-      requests:
-        cpu: 1000m
-        memory: 1Gi
-    readinessProbe:
-      exec:
-        command: [sh, -c, "ls -S /var/run/docker.sock"]
-    command:
-    - sleep
-    args:
-    - 99d
-    volumeMounts:
-    - name: docker-socket
-      mountPath: /var/run
+    - name: nerdctl
+      image: gaussye/nerdctlrootless:latest
+      tty: true
+      resources:
+        limits:
+          cpu: 3000m
+          memory: 5Gi
+        requests:
+          cpu: 3000m
+          memory: 5Gi
+      securityContext:
+        privileged: true
+        runAsUser: 0
+  restartPolicy: Always
