--- a/Jenkins-nerdctl-amd64.yaml
+++ b/Jenkins-nerdctl-amd64.yaml
@@ -5,6 +5,9 @@ metadata:
     app: nerdctl
   name: nerdctl
 spec:
+  serviceAccountName: jenkins-sa
+  nodeSelector:
+    kubernetes.io/arch: amd64
   containers:
     - name: nerdctl
       image: gaussye/nerdctlrootless:latest
