--- a/Jenkins-nerdctl-amd64.yaml
+++ b/Jenkins-nerdctl-amd64.yaml
@@ -10,7 +10,7 @@ spec:
     kubernetes.io/arch: amd64
   containers:
     - name: nerdctl
-      image: gaussye/nerdctlrootless:latest
+      image: gaussye/nerdctl-full:latest
       tty: true
       securityContext:
         privileged: true
