--- a/Jenkins-nerdctl-arm64.yaml
+++ b/Jenkins-nerdctl-arm64.yaml
@@ -10,7 +10,7 @@ spec:
     kubernetes.io/arch: arm64
   containers:
     - name: nerdctl
-      image: gaussye/nerdctl:20230921-01-arm64
+      image: gaussye/nerdctl-full:latest
       tty: true
       securityContext:
         privileged: true
