--- a/Jenkins-nerdctl-amd64.yaml
+++ b/Jenkins-nerdctl-amd64.yaml
@@ -12,9 +12,7 @@ spec:
     - name: nerdctl
       image: gaussye/nerdctl-full:latest
       command:
-      - sleep
-      args:
-      - 99d
+      tty: true
       securityContext:
         privileged: true
         runAsUser: 0
