--- a/Jenkins-manifest-tool.yaml
+++ b/Jenkins-manifest-tool.yaml
@@ -1,1 +1,15 @@
-
+apiVersion: v1
+kind: Pod
+metadata:
+  name: manifest-tool
+  namespace: jenkins
+spec:
+  serviceAccountName: jenkins-sa
+  containers:
+    - name: manifest-tool
+      image: gaussye/manifest-tool:latest
+      command:
+        - sleep
+      args:
+        - 99d
+  restartPolicy: Never
